--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -1,12 +1,10 @@
-name: aritify
+name: aritify-test
 on: [push]
-
 jobs:
   upload-file:
     runs-on: ubuntu-latest
     steps:
-      - shell: bash
-        run: | 
+      - run: | 
           expr 1 + 1 > output.log
       - name: upload output file to arifact
         uses: actions/upload-artifact@v3
