--- a/.github/workflows/context2.yml
+++ b/.github/workflows/context2.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: run normal ci
-        run: ./run-tests
+        run: ./test.sh
     
   pull_request_ci:
     runs-on: ubuntu-latest
@@ -15,4 +15,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: run pr ci
-        run: ./run-additional-pr-ci
+        run: ./test.sh
